--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+bincode = "1.3.3"
 lazy_static = "1.5.0"
 parking_lot = "0.12.3"
 priority-queue = "2.1.0"
+serde = {version = "1.0.210", features = ["derive"]}
