--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ lazy_static = "1.5.0"
 parking_lot = "0.12.3"
 priority-queue = "2.1.0"
 serde = {version = "1.0.210", features = ["derive"]}
+sqlparser = "0.51.0"
 uuid = {version = "1.10.0", features = ["fast-rng", "v4", "macro-diagnostics"]}
