--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+backtrace = "0.3.74"
 bincode = "1.3.3"
 lazy_static = "1.5.0"
 parking_lot = {version = "0.12.3", features = ["deadlock_detection"]}
