--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0.86"
 backtrace = "0.3.74"
 bincode = "1.3.3"
 lazy_static = "1.5.0"
-parking_lot = {version = "0.12.3", features = ["deadlock_detection"]}
+parking_lot = "0.12.3"
 priority-queue = "2.1.0"
 serde = {version = "1.0.210", features = ["derive"]}
 sqlparser = "0.51.0"
