--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ tokio = {version = "1.40.0", features = ["full"]}
 arrayvec = "0.7.6"
 
 [dev-dependencies]
+rand = "0.8.5"
 uuid = {version = "1.10.0", features = ["fast-rng", "v4", "macro-diagnostics"]}
