--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "idk"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
@@ -12,7 +12,7 @@ priority-queue = "2.1.0"
 serde = {version = "1.0.210", features = ["derive"]}
 sqlparser = "0.51.0"
 backtrace = "0.3.74"
-tokio = {version = "1.40.0", features = ["full"]}
+tokio = {version = "1.40.0", features = ["net", "io-util", "rt-multi-thread", "macros"]}
 arrayvec = "0.7.6"
 
 [dev-dependencies]
