run pre-commit hook on slt file change

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,5 +19,5 @@ repos:
         name: Run tests
         entry: cargo test --all --release
         language: rust
-        types: [rust]
+        files: \.(rs|slt)$
         pass_filenames: false
