--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "idk"
 version = "0.2.0"
 edition = "2021"
-default-run = "idk-server"
+# default-run = "idk-server"
 
 [dependencies]
 anyhow = "1.0.86"
@@ -15,9 +15,9 @@ sqlparser = "0.51.0"
 backtrace = "0.3.74"
 tokio = {version = "1.40.0", features = ["net", "io-util", "rt-multi-thread", "macros"]}
 arrayvec = "0.7.6"
-serde_json =  {version = "1.0.134" }
 lambda_runtime =  {version = "0.13.0", features = ["anyhow"] }
 lambda_http = {version = "0.14.0", features = ["apigw_http"] }
+askama = "0.12.1"
 
 [[bin]]
 name = "idk-lambda"
