--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ askama = "0.12.1"
 
 [[bin]]
 name = "idk-lambda"
-path = "src/lambda/main.rs"
+path = "src/deployment/main.rs"
 
 [[bin]]
 name = "idk-server"
